@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.017.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.023.
 use strict;
 use warnings;
 
@@ -21,7 +21,7 @@ my %WriteMakefileArgs = (
     "File::Temp" => 0,
     "Hash::SharedMem" => 0,
     "JSON::XS" => 0,
-    "Prometheus::Tiny" => "0.005",
+    "Prometheus::Tiny" => "0.008",
     "parent" => 0,
     "strict" => 0,
     "warnings" => 0
@@ -52,7 +52,7 @@ my %FallbackPrereqs = (
   "Hash::SharedMem" => 0,
   "JSON::XS" => 0,
   "Plack::Test" => 0,
-  "Prometheus::Tiny" => "0.005",
+  "Prometheus::Tiny" => "0.008",
   "Test::Differences" => 0,
   "Test::Exception" => 0,
   "Test::More" => 0,
