@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+- Update for Prometheus::Tiny 0.008 enum support
 
 0.023     2021-06-07 13:57:38+10:00 Australia/Melbourne
 - Get compiling under 5.8 again
